converted to JPA and uses DTOs